sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Object__mdt/SFDC_Industry_Mapping_Object__mdt.object-meta.xml
<CustomObject>
    <description>Standard and Custom objects that exist in the SFDC Industries package that the subscriber org is transitioning to</description>
    <label>SFDC Industry Mapping Object</label>
    <pluralLabel>SFDC Industry Mapping Objects</pluralLabel>
</CustomObject>