sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Object__mdt/fields/Assessment_Label__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Label__c</fullName>
    <description>The name of the label that should be used when this object is displayed within the questionnaire.</description>
    <inlineHelpText>The name of the label that should be used when this object is displayed within the questionnaire.</inlineHelpText>
    <label>Assessment Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>