sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Object__mdt/fields/Description_Label__c.field-meta.xml
<CustomField>
    <fullName>Description_Label__c</fullName>
    <description>A reference to the Custom Label that houses this object&apos;s description.</description>
    <inlineHelpText>A reference to the Custom Label that houses this object&apos;s description.</inlineHelpText>
    <label>Description Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>