sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Object__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If unchecked, skips this object for mapping.</description>
    <inlineHelpText>If unchecked, skips this object for mapping.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>