sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Object__mdt/fields/Hidden_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Record_Types__c</fullName>
    <description>If populated, indicates the record types that should be hidden from the user during mapping.</description>
    <inlineHelpText>If populated, indicates the record types that should be hidden from the user during mapping.</inlineHelpText>
    <label>Hidden Record Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>