sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Object__mdt/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>The order in which this object should show within the mapping screen. (Lower numbers show first)</description>
    <inlineHelpText>The order in which this object should show within the mapping screen. (Lower numbers show first)</inlineHelpText>
    <label>Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>