sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Object__mdt/fields/Mapping_Section__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Section__c</fullName>
    <description>Which mapping screen this object should be shown on (If none specified, this object will only be shown on the final mapping screen).</description>
    <inlineHelpText>Which mapping screen this object should be shown on (If none specified, this object will only be shown on the final mapping screen).</inlineHelpText>
    <label>Mapping Section</label>
    <referenceTo>SFDC_Industry_Mapping_Section__mdt</referenceTo>
    <relationshipLabel>SFDC Industry Mapping Objects</relationshipLabel>
    <relationshipName>SFDC_Industry_Mapping_Objects</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>