sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Mapping_Object__mdt/listViews/All_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>Enabled__c</columns>
    <columns>Mapping_Section__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Description_Label__c</columns>
    <columns>Index__c</columns>
    <columns>Hidden_Record_Types__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mappings</label>
    <language>en_US</language>
</ListView>